--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    var socket = io.connect('http://127.0.0.1:8080');
+    socket.on('connect', function() {
+        socket.emit('hello', {data: 'I\'m connected!'});
+    });
+</script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
+
 
 
 <body>
