just adding sync stuf

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,5 +24,8 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'Messenger'));
     </script>
-    Hi there!
+    <h1>
+        Catch up with your friends! Sync your google calendar with Catchupbot and let it handle the tedious work of scheduling.
+        <a href="authorize">Sync Now</a>
+    </h1>
 </body>
