--- a/templates/pick_event.html
+++ b/templates/pick_event.html
@@ -16,6 +16,6 @@
         }(document, 'script', 'Messenger'));
     </script>
     <h1>
-        Share CatchupBot with your friends to make scheduling easier than ever!
+        PICK AN EVENT!!
     </h1>
 </body>
